# BGPExtrapolator

./: '  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
BGPExtrapolator/: BGPExtrapolator.cpp  BGPExtrapolator.h  CMakeLists.txt  DefaultLaunch.json  Graph.cpp  Main.cpp  ProcessAnnouncement.cpp  Util.cpp
BGPExtrapolator/TestCases/: BGP_Prop-PropagationState-Truth  BGP_Prop-PropagationState_StubsRemoval-Truth  BGP_Prop-Relationships.txt  BGP_Prop-Results-Truth.tsv  BGP_Prop-Results.tsv  BGP_Prop-Results_StubsRemoval.tsv  BGP_Prop-SeedState-Truth  BGP_Prop-SeedState_StubsRemoval-Truth  BGP_Prop-Truth.tsv  BGP_Prop-Truth.txt  BGP_Prop_Stub-Announcements.txt  BGP_Prop_Stub-Truth.txt  BGP_Prop_StubOrigin-PropagationState-Truth  BGP_Prop_StubOrigin-Relationships.tsv  BGP_Prop_StubOrigin-Results-Truth.tsv  BGP_Prop_StubOrigin-SeedState-Truth  BGP_Prop_StubOrigin-SeedState_StubsRemoval-Truth  Path_len_Preference-PropagationState-Truth  Path_len_Preference-PropagationState_StubsRemoval-Truth  Path_len_Preference-Relationships.txt  Path_len_Preference-Results-Truth.tsv  Path_len_Preference-SeedState-Truth  Path_len_Preference-SeedState_StubsRemoval-Truth  Path_len_Preference-Truth.tsv  Path_len_Preference-Truth.txt  RealData-Announcements_1000.tsv  Relation_Preference-PropagationState-Truth  Relation_Preference-PropagationState_StubsRemoval-Truth  Relation_Preference-Relationships.txt  Relation_Preference-Results-Truth.tsv  Relation_Preference-SeedState-Truth  Relation_Preference-SeedState_StubsRemoval-Truth  Relation_Preference-Truth.tsv  Relation_Preference-Truth.txt  Tiebrake_Preference-PropagationState-Truth  Tiebrake_Preference-PropagationState_StubsRemoval-Truth  Tiebrake_Preference-Relationships.tsv  Tiebrake_Preference-Relationships.txt  Tiebrake_Preference-Results_StubsRemoval.tsv  Tiebrake_Preference-SeedState-Truth  (+3 more)
BGPExtrapolator/include/: Announcement.hpp  Defines.h  Testing.hpp  Utils.hpp
BGPExtrapolator/include/Graphs/: Graph.hpp  LocalRibs.hpp  LocalRibsTransposed.hpp
BGPExtrapolator/include/PropagationPolicies/: BGPPolicy.hpp  PropagationPolicy.hpp
BGPExtrapolator/include/Propagation_ExportPolicies/: ExportAllPolicy.hpp  PropagationExportPolicy.hpp
BGPExtrapolator/include/Propagation_ImportPolicies/: BGPDefaultImportPolicy.hpp  BGPPolicy.hpp  PropagationImportPolicy.hpp
BGPExtrapolator/src/: Main.cpp  Testing.cpp  Util.cpp
BGPExtrapolator/src/Graphs/: Graph.cpp
